@@ -81,7 +81,7 @@ class ServiceDiscovery:
 		LogEvent(INFO, msg="Looking for handler")
 
 		for query in el.elements():
-			xmlns = query.defaultUri
+			xmlns = query.uri
 			node = query.getAttribute("node")
 
 			if xmlns.startswith(globals.DISCO) and node:
